# String-Matching

./: .gitignore  CMakeLists.txt  README.md
data/: sample_texts.txt  test_patterns.txt
include/: bm_matcher.h  kmp_matcher.h  naive_matcher.h  rabin_karp_matcher.h  rk_matcher.h  string_matcher.h  utils.h
main/: main.cpp
mains/: test_bm.cpp  test_kmp.cpp  test_naive.cpp  test_rk.cpp
results/: kmp_results.csv  naive_results.csv
scripts/: generate_datasets.py  regression.py  regression_bm.py  regression_kmp.py  regression_naive.py  regression_rk.py
src/: bm_matcher.cpp  kmp_matcher.cpp  naive_matcher.cpp  rk_matcher.cpp  utils.cpp
test/: test_runner.cpp  utils.cpp
